external-crates/move/crates/move-compiler/tests/move_2024/matching/lit_match.exp
error[E13003]: feature is under active development
  ┌─ tests/move_2024/matching/lit_match.move:3:17
  │
3 │     public enum ABC<T> has drop {
  │                 ^^^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

